SigmaCodebackup3rdSep/objects/Service_Quote_Payment_Terms__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Payment_Terms_1__c</fullName>
        <label>Payment Terms 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Payment_Terms_2__c</fullName>
        <label>Payment Terms 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Payment_Terms_3__c</fullName>
        <label>Payment Terms 3</label>
        <type>TextArea</type>
    </fields>
    <label>Service Quote Payment Terms</label>
</CustomObject>